# zurihac18-stackage2nix

./: stack.yaml
bar/: bar.cabal
bar/src/: Bar.hs
foo/: foo.cabal
nix/: nixpkgs.nix  shell.nix  stackage-overlay.json
