name:           bar
version:        0.0.0
author:         Author name here
maintainer:     Author name here
license:        MIT
build-type:     Simple
cabal-version:  >= 1.10

library
  exposed-modules:
      Bar
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base,
      text
  default-language: Haskell2010

